<resources>
    <string name="app_name">BusApp</string>
    <string name="button_addBus">Add Bus</string>
    <string name="hint_BusOrigin">Bus Station</string>
    <string name="hint_BusDestination">Destination </string>
    <string name="hint_BusRoute">Route </string>
    <string name="hint_BusDepartureTime">Departure Time </string>
    <string name="hint_BusArrivalTime">Arrival Time </string>
    <string name="menu_addBus">Add</string>
    <string name="menu_cancelAddBus">Cancel</string>
    <string name="enter_Bus_Origin"> Please enter a Origin </string>
    <string name="save_bus"> Save Bus </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_busApp_image">Select Bus Station image</string>
    <string name="change_BusApp_image">Change Bus Station image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteBusApp">Delete</string>
    <string name="title_activity_bus_app_maps">All Bus Station Maps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text"> Login</string>
    <string name="continueButton" />
</resources>