<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center"
            android:text="Bus App"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.Text"
            android:text="@string/signed_out"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.Text"
            tools:text="Firebase User ID: tljh1223" />
        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="182dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custombutton"
                android:gravity="center"
                android:hint="email"
                android:textColorHint="#FFFBF6" />

            <EditText
                android:id="@+id/fieldPassword"
                android:layout_width="167dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custombutton"
                android:gravity="center"
                android:hint="password"
                android:textColorHint="#FFFBF6" />
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:buttonTint="#FFFBF6"
            android:hint="#FFFBF6"
            android:text="Keep me Signed in "
            android:textColor="#FFFBF6" />

        <LinearLayout
                android:id="@+id/emailPasswordButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailPasswordFields"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_width="187dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custombutton2"
                android:text="Signin"
                android:textAllCaps="false"
                android:textColor="#FFFBF6" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_width="187dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custombutton2"
                android:textAllCaps="false"
                android:textColor="#FFFBF6"
                android:text="@string/create_account" />
    </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:textColor="#FFFBF6"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/signOutButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1.0"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/continueButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1.0"
            android:text="@string/continueButton"/>
        <Button
            android:id="@+id/verifyEmailButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="fill_vertical"
            android:layout_weight="1.0"
            android:text="@string/verify_email"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>